--- a/404.html
+++ b/404.html
@@ -197,9 +197,9 @@
 <div id="content" class="content">
 <h1 class="title">LZ</h1>
 
-<div id="outline-container-orgcccdb88" class="outline-2">
-<h2 id="orgcccdb88">404 - page not found</h2>
-<div class="outline-text-2" id="text-orgcccdb88">
+<div id="outline-container-org90e2376" class="outline-2">
+<h2 id="org90e2376">404 - page not found</h2>
+<div class="outline-text-2" id="text-org90e2376">
 <p>
 my bad probably, i moved some stuff around. head <a href="https://larzeitlin.github.io">home</a> to find what you are looking for.
 </p>
