--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@ hi i'm luke - this is my blog
 <li><a href="http://www.lzeitlin.xyz/octohabit/">habit tracker</a></li>
 <li><a href="monads-python.html">monads in python</a></li>
 <li><a href="http://www.lzeitlin.xyz/laranjas/">particle system</a></li>
+<li><a href="cljs-webgl1.html">webgl in cljs part 1</a></li>
 </ul>
 </div>
 </body>
