add second half of webgl part 1

--- a/404.html
+++ b/404.html
@@ -197,14 +197,17 @@
 <div id="content" class="content">
 <h1 class="title">LZ</h1>
 
-<div id="outline-container-org90e2376" class="outline-2">
-<h2 id="org90e2376">404 - page not found</h2>
-<div class="outline-text-2" id="text-org90e2376">
+<div id="outline-container-org29b3484" class="outline-2">
+<h2 id="org29b3484">404 - page not found</h2>
+<div class="outline-text-2" id="text-org29b3484">
 <p>
 my bad probably, i moved some stuff around. head <a href="https://larzeitlin.github.io">home</a> to find what you are looking for.
 </p>
 </div>
 </div>
+</div>
+<div id="postamble" class="status">
+<p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
 </html>
