--- a/convolution.html
+++ b/convolution.html
@@ -200,12 +200,12 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org4466b81">Convolution</a>
+<li><a href="#org34c58b1">Convolution</a>
 <ul>
-<li><a href="#org632c517">What can convolution do for us?</a></li>
-<li><a href="#org56c4fa0">Do LTI systems exist?</a></li>
-<li><a href="#org905ef8a">OK, lets convolve!</a></li>
-<li><a href="#orgbe33df5">Why do we do the flip?</a></li>
+<li><a href="#org76677c8">What can convolution do for us?</a></li>
+<li><a href="#orgd009680">Do LTI systems exist?</a></li>
+<li><a href="#orgbf29bc4">OK, lets convolve!</a></li>
+<li><a href="#org1e9c857">Why do we do the flip?</a></li>
 <li><a href="#impulse-responses">Impulse Responses</a></li>
 </ul>
 </li>
@@ -213,9 +213,9 @@
 </div>
 </div>
 
-<div id="outline-container-org4466b81" class="outline-2">
-<h2 id="org4466b81">Convolution</h2>
-<div class="outline-text-2" id="text-org4466b81">
+<div id="outline-container-org34c58b1" class="outline-2">
+<h2 id="org34c58b1">Convolution</h2>
+<div class="outline-text-2" id="text-org34c58b1">
 <p>
 Convolution is, to me at least, a really inspirational subject. Why?
 Because it can initially seem like DSP magic, but it's really not hard
@@ -243,9 +243,9 @@ bother.
 </p>
 </div>
 
-<div id="outline-container-org632c517" class="outline-3">
-<h3 id="org632c517">What can convolution do for us?</h3>
-<div class="outline-text-3" id="text-org632c517">
+<div id="outline-container-org76677c8" class="outline-3">
+<h3 id="org76677c8">What can convolution do for us?</h3>
+<div class="outline-text-3" id="text-org76677c8">
 <p>
 Quite a lot actually. We can use convolution to model any <b>linear time
 invariant</b> (LTI) system. Let's explore that term:
@@ -289,13 +289,13 @@ Again, this is shown by A producing the same result as B.
 </p>
 
 
-<div id="orgfbb56e1" class="figure">
+<div id="org895d19a" class="figure">
 <p><img src="images/linear1.jpg" alt="linear1.jpg" />
 </p>
 </div>
 
 
-<div id="org68ce72e" class="figure">
+<div id="org816ec8b" class="figure">
 <p><img src="images/3.1.png" alt="3.1.png" />
 </p>
 </div>
@@ -347,9 +347,9 @@ do so.
 </div>
 </div>
 
-<div id="outline-container-org56c4fa0" class="outline-3">
-<h3 id="org56c4fa0">Do LTI systems exist?</h3>
-<div class="outline-text-3" id="text-org56c4fa0">
+<div id="outline-container-orgd009680" class="outline-3">
+<h3 id="orgd009680">Do LTI systems exist?</h3>
+<div class="outline-text-3" id="text-orgd009680">
 <p>
 <i>"What what? You just told us that a whole heap of stuff is LTI!"</i>
 </p>
@@ -373,9 +373,9 @@ stealing the room's soul. Magic, right?
 </div>
 </div>
 
-<div id="outline-container-org905ef8a" class="outline-3">
-<h3 id="org905ef8a">OK, lets convolve!</h3>
-<div class="outline-text-3" id="text-org905ef8a">
+<div id="outline-container-orgbf29bc4" class="outline-3">
+<h3 id="orgbf29bc4">OK, lets convolve!</h3>
+<div class="outline-text-3" id="text-orgbf29bc4">
 <p>
 Before going any further, I should point out that the mathematical
 operator for convolution is often drawn as an asterisk: * . This is a
@@ -390,7 +390,7 @@ The definition of discrete-time convolution is as follows:
 </p>
 
 
-<div id="orge87920e" class="figure">
+<div id="orgcbbd664" class="figure">
 <p><img src="images/3.2.jpeg" alt="3.2.jpeg" />
 </p>
 </div>
@@ -462,7 +462,7 @@ flipped around 0 on the y axis)</li>
 </ul>
 
 
-<div id="org6e89021" class="figure">
+<div id="org103e04f" class="figure">
 <p><img src="images/3.3.gif" alt="3.3.gif" />
 </p>
 </div>
@@ -516,9 +516,9 @@ together.</b>
 </div>
 </div>
 
-<div id="outline-container-orgbe33df5" class="outline-3">
-<h3 id="orgbe33df5">Why do we do the flip?</h3>
-<div class="outline-text-3" id="text-orgbe33df5">
+<div id="outline-container-org1e9c857" class="outline-3">
+<h3 id="org1e9c857">Why do we do the flip?</h3>
+<div class="outline-text-3" id="text-org1e9c857">
 <p>
 We need to flip g because we want the <b>beginning of g</b> to meet the
 <b>beginning of f</b> first, and the <b>end of g</b> to meet the <b>end of f</b> last,
@@ -552,7 +552,7 @@ points apart from one point where it's value is 1. For example: [0, 1, 0,
 </p>
 
 
-<div id="org6a505b4" class="figure">
+<div id="org7cdfa4f" class="figure">
 <p><img src="images/3.4.jpeg" alt="3.4.jpeg" />
 </p>
 </div>
@@ -592,6 +592,9 @@ is no doubt pretty technical and equipment intensive.
 </div>
 </div>
 </div>
+</div>
+<div id="postamble" class="status">
+<p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
 </html>
