--- a/ring-modulation.html
+++ b/ring-modulation.html
@@ -221,32 +221,32 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orga3994ec">Ring Modulation and Frequency Shifting</a>
+<li><a href="#org2820753">Ring Modulation and Frequency Shifting</a>
 <ul>
-<li><a href="#org1f25e96">Rethinking basic operations</a>
+<li><a href="#org2048ade">Rethinking basic operations</a>
 <ul>
-<li><a href="#org69e1fec">Addition and Subtraction</a></li>
-<li><a href="#org138c5fa">Multiplication shows similarity</a></li>
+<li><a href="#orge83d138">Addition and Subtraction</a></li>
+<li><a href="#orgc172009">Multiplication shows similarity</a></li>
 </ul>
 </li>
-<li><a href="#org0c344eb">Adding and Multiplying signals</a></li>
-<li><a href="#orgb3937be">Let's get Triggy with it&#x2026;</a></li>
-<li><a href="#orgf9a32b2">SSB Modulation</a></li>
-<li><a href="#orgbf1c146">Hilbert Transform</a>
+<li><a href="#orgf7fd76d">Adding and Multiplying signals</a></li>
+<li><a href="#org059b16a">Let's get Triggy with it&#x2026;</a></li>
+<li><a href="#orgf78d91d">SSB Modulation</a></li>
+<li><a href="#org67412a8">Hilbert Transform</a>
 <ul>
-<li><a href="#orgc9ebde5">Phase shifting with All-Pass Filters</a></li>
+<li><a href="#org256a0e1">Phase shifting with All-Pass Filters</a></li>
 </ul>
 </li>
-<li><a href="#org8ebbe6b">Aliasing</a></li>
-<li><a href="#orga6f305c">Gotchas and stuff</a></li>
+<li><a href="#org81c7b41">Aliasing</a></li>
+<li><a href="#org9c58c1f">Gotchas and stuff</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orga3994ec" class="outline-2">
-<h2 id="orga3994ec">Ring Modulation and Frequency Shifting</h2>
-<div class="outline-text-2" id="text-orga3994ec">
+<div id="outline-container-org2820753" class="outline-2">
+<h2 id="org2820753">Ring Modulation and Frequency Shifting</h2>
+<div class="outline-text-2" id="text-org2820753">
 <p>
 I started reading about this topic when looking for a computationally
 cheap way of doing frequency shifting. This is distinct from pitch
@@ -280,9 +280,9 @@ to it all&#x2026;
 </p>
 </div>
 
-<div id="outline-container-org1f25e96" class="outline-3">
-<h3 id="org1f25e96">Rethinking basic operations</h3>
-<div class="outline-text-3" id="text-org1f25e96">
+<div id="outline-container-org2048ade" class="outline-3">
+<h3 id="org2048ade">Rethinking basic operations</h3>
+<div class="outline-text-3" id="text-org2048ade">
 <p>
 When we think about basic mathematical operations (addition,
 subtraction, multiplication, division), our instincts are based in
@@ -302,9 +302,9 @@ basic operations.
 </p>
 </div>
 
-<div id="outline-container-org69e1fec" class="outline-4">
-<h4 id="org69e1fec">Addition and Subtraction</h4>
-<div class="outline-text-4" id="text-org69e1fec">
+<div id="outline-container-orge83d138" class="outline-4">
+<h4 id="orge83d138">Addition and Subtraction</h4>
+<div class="outline-text-4" id="text-orge83d138">
 <p>
 Thinking about the boxes of apples and anti-apples, subtraction and
 addition are not really looking so opposite any more, in fact they are
@@ -317,9 +317,9 @@ inversed, but the auditory result is pretty similar to the addition.
 </div>
 </div>
 
-<div id="outline-container-org138c5fa" class="outline-4">
-<h4 id="org138c5fa">Multiplication shows similarity</h4>
-<div class="outline-text-4" id="text-org138c5fa">
+<div id="outline-container-orgc172009" class="outline-4">
+<h4 id="orgc172009">Multiplication shows similarity</h4>
+<div class="outline-text-4" id="text-orgc172009">
 <p>
 Rather than thinking of multiplication as an increaser, I like to
 visualise it as a <i>test of similarity</i>. It seems like a strange way to
@@ -351,9 +351,9 @@ having a similar sign)</li>
 </div>
 </div>
 
-<div id="outline-container-org0c344eb" class="outline-3">
-<h3 id="org0c344eb">Adding and Multiplying signals</h3>
-<div class="outline-text-3" id="text-org0c344eb">
+<div id="outline-container-orgf7fd76d" class="outline-3">
+<h3 id="orgf7fd76d">Adding and Multiplying signals</h3>
+<div class="outline-text-3" id="text-orgf7fd76d">
 <p>
 So, how about we multiply some signals together? This is effectively
 ring modulation. Ring modulation gets its name from the circular
@@ -404,7 +404,7 @@ added together:
 </p>
 
 
-<div id="orgafc7aa4" class="figure">
+<div id="org2e2ebee" class="figure">
 <p><img src="images/5.1.gif" alt="5.1.gif" />
 </p>
 </div>
@@ -426,7 +426,7 @@ everything up above the horizontal axis, like so:
 </p>
 
 
-<div id="org9897c64" class="figure">
+<div id="orgd4be9fe" class="figure">
 <p><img src="images/5.2.gif" alt="5.2.gif" />
 </p>
 </div>
@@ -445,7 +445,7 @@ Let's have a look:
 </p>
 
 
-<div id="org00fbef6" class="figure">
+<div id="org70f6773" class="figure">
 <p><img src="images/5.3.gif" alt="5.3.gif" />
 </p>
 </div>
@@ -468,7 +468,7 @@ the sum and the difference of the signals above&#x2026;
 </p>
 
 
-<div id="org28f30e6" class="figure">
+<div id="org6ae8fff" class="figure">
 <p><img src="images/5.4.gif" alt="5.4.gif" />
 </p>
 </div>
@@ -484,7 +484,7 @@ if we scale it down by a half they look very similar indeed:
 </p>
 
 
-<div id="org0c5599e" class="figure">
+<div id="org03d9a24" class="figure">
 <p><img src="images/5.5.gif" alt="5.5.gif" />
 </p>
 </div>
@@ -508,9 +508,9 @@ from 0 at their own speed.
 </div>
 </div>
 
-<div id="outline-container-orgb3937be" class="outline-3">
-<h3 id="orgb3937be">Let's get Triggy with it&#x2026;</h3>
-<div class="outline-text-3" id="text-orgb3937be">
+<div id="outline-container-org059b16a" class="outline-3">
+<h3 id="org059b16a">Let's get Triggy with it&#x2026;</h3>
+<div class="outline-text-3" id="text-org059b16a">
 <p>
 We can see the concept from above taking place in these trig identities.
 </p>
@@ -586,9 +586,9 @@ shifter.
 </div>
 </div>
 
-<div id="outline-container-orgf9a32b2" class="outline-3">
-<h3 id="orgf9a32b2">SSB Modulation</h3>
-<div class="outline-text-3" id="text-orgf9a32b2">
+<div id="outline-container-orgf78d91d" class="outline-3">
+<h3 id="orgf78d91d">SSB Modulation</h3>
+<div class="outline-text-3" id="text-orgf78d91d">
 <p>
 Here we shift gears and start looking at this all in the frequency
 domain.
@@ -608,7 +608,7 @@ want to isolate the upper sideband.
 </p>
 
 
-<div id="orgec45966" class="figure">
+<div id="orgfd91910" class="figure">
 <p><img src="images/5.6.png" alt="5.6.png" />
 </p>
 </div>
@@ -635,7 +635,7 @@ multiplied by the carrier but in phase quadrature, so \[\sin(\omega)\].
 </p>
 
 
-<div id="org5961e08" class="figure">
+<div id="org273d9ff" class="figure">
 <p><img src="images/5.7.png" alt="5.7.png" />
 </p>
 </div>
@@ -653,9 +653,9 @@ what we are after is a Hilbert Transform of our input signal.
 </div>
 </div>
 
-<div id="outline-container-orgbf1c146" class="outline-3">
-<h3 id="orgbf1c146">Hilbert Transform</h3>
-<div class="outline-text-3" id="text-orgbf1c146">
+<div id="outline-container-org67412a8" class="outline-3">
+<h3 id="org67412a8">Hilbert Transform</h3>
+<div class="outline-text-3" id="text-org67412a8">
 <p>
 The <a href="https://en.wikipedia.org/wiki/Hilbert_transform">Hilbert
 Transform</a> takes a time domain signal and returns a time domain signal
@@ -669,9 +669,9 @@ network of all-pass filters.
 </p>
 </div>
 
-<div id="outline-container-orgc9ebde5" class="outline-4">
-<h4 id="orgc9ebde5">Phase shifting with All-Pass Filters</h4>
-<div class="outline-text-4" id="text-orgc9ebde5">
+<div id="outline-container-org256a0e1" class="outline-4">
+<h4 id="org256a0e1">Phase shifting with All-Pass Filters</h4>
+<div class="outline-text-4" id="text-org256a0e1">
 <p>
 All-pass filters affect the phase spectrum of a signal without changing
 the overall energy at each frequency. The result by itself is barely
@@ -687,7 +687,7 @@ for a large part of the spectrum.
 </p>
 
 
-<div id="orgcd52ba0" class="figure">
+<div id="org7d8d679" class="figure">
 <p><img src="images/5.8.png" alt="5.8.png" />
 </p>
 </div>
@@ -714,9 +714,9 @@ why to see why
 </div>
 </div>
 
-<div id="outline-container-org8ebbe6b" class="outline-3">
-<h3 id="org8ebbe6b">Aliasing</h3>
-<div class="outline-text-3" id="text-org8ebbe6b">
+<div id="outline-container-org81c7b41" class="outline-3">
+<h3 id="org81c7b41">Aliasing</h3>
+<div class="outline-text-3" id="text-org81c7b41">
 <p>
 If you've taken all the info above, put it together and build a
 frequency shifter then well done! You may be annoyed to hear some nasty
@@ -732,9 +732,9 @@ possible.
 </div>
 </div>
 
-<div id="outline-container-orga6f305c" class="outline-3">
-<h3 id="orga6f305c">Gotchas and stuff</h3>
-<div class="outline-text-3" id="text-orga6f305c">
+<div id="outline-container-org9c58c1f" class="outline-3">
+<h3 id="org9c58c1f">Gotchas and stuff</h3>
+<div class="outline-text-3" id="text-org9c58c1f">
 <p>
 Some weird concepts in this one. I spent a long time being concerned
 about the two sidebands overlapping, and how could you possibly isolate
@@ -770,6 +770,9 @@ all totally wrong!
 </div>
 </div>
 </div>
+</div>
+<div id="postamble" class="status">
+<p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
 </html>
